...
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/minimum_default_padding">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView_location"
                        style="@style/AppTheme.Widget.AutocompleteView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/default_padding"
                        android:drawableStart="@drawable/current_location"
                        android:hint="@string/location_chooser_text" />
...
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/search"
        style="@style/AppTheme.Widget.RecordSummary.AccentBottomButton"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_button_height"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/search" />

...
